Add comma button

--- a/pyco_web/index.html
+++ b/pyco_web/index.html
@@ -1057,7 +1057,7 @@
             <button class="key-btn secondary" data-char=")">)</button>
             <button class="key-btn secondary" data-char=".">.</button>
             <button class="key-btn" data-char="0">0</button>
-            <button class="key-btn secondary" data-char="-">±</button>
+            <button class="key-btn secondary" data-char=",">,</button>
             <button class="key-btn secondary" data-char="+">+</button>
             <!-- Row 5: f(x), STO, ANS, Enter -->
             <button class="key-btn secondary" id="functionBrowserBtn">f(x)</button>
